# polygeist

./: .gitmodules  CMakeLists.txt
tools/: CMakeLists.txt
tools/cgeist/: CMakeLists.txt  driver.cc
tools/cgeist/Lib/: CGCall.cc  clang-mlir.cc  clang-mlir.h
tools/cgeist/Test/: CMakeLists.txt  addressoff_call.cpp  lit.cfg
tools/cgeist/Test/LinalgPlugin/: matvec.c
tools/linalg-plugin/: CMakeLists.txt  linalg-plugin-opt.cc
tools/linalg-plugin/include/: error_report.h  lexer.h  mlirAffineExprGen.h  mlirGen.h  parser.h  sema-with-range.h  sema.h  syntaxHandler.h  tree.h  tree_views.h
tools/linalg-plugin/lib/: lexer.cc  mlirAffineExprGen.cpp  mlirGen.cpp  syntaxHandler.cc  tree.cpp
tools/linalg-plugin/test/: CMakeLists.txt  emit-pattern-replacement-mlir.tc  lit.cfg.py  lit.site.cfg.py.in  matmu-mlir.tc  matmul-mlir.tc  matvec-mlir.tc  show-ast-pattern-and-replacement.tc  show-ast.tc  transpose-mlir.tc
tools/polymer/: CMakeLists.txt
tools/polymer/tools/polymer-translate/: CMakeLists.txt
